--- a/views/booking_categories_management.erb
+++ b/views/booking_categories_management.erb
@@ -42,7 +42,7 @@
       <td class="table-cell">
            <%% if (entity.calendar_id && entity.calendar_id != null) { %>
               <div>
-                <a href="/admin/events/<%%=entity.calendar_id%>">
+                <a href="/admin/calendar/events/<%%=entity.calendar_id%>">
                   <%=t.booking_category_management.table.calendar%>
                 </a>
               </div> 
