--- a/views/booking_categories_management.js.erb
+++ b/views/booking_categories_management.js.erb
@@ -59,7 +59,7 @@ require(["jquery", "YSDEntityManagement", "YSDEntityManagementComplementHooks",
   hooks = hooks.concat(EntityManagementComplementHooks.complements);
                  
   var contentsManager = new EntityManagement(urls, 'booking_category', 20, hooks,
-    {prefix: '/admin'});
+    {prefix: '/admin/booking'});
 
   
 });
