--- a/views/booking_edit_pickupreturn.js.erb
+++ b/views/booking_edit_pickupreturn.js.erb
@@ -57,7 +57,7 @@
                    contentType: 'application/json; charset=utf-8', /* Data type sent to the server */
        	                  	           
        	           success : function(data, textStatus, jqXHR) { /* RESPONSE OK */
-       	           	 location.href="/admin/bookings/<%=booking.id%>"
+       	           	 location.href="/admin/booking/bookings/<%=booking.id%>"
        	           },	
        	           
        	           error: function(jqXHR, textStatus, errorThrow){ /* RESPONSE ERROR */
