--- a/views/booking_items_management.js.erb
+++ b/views/booking_items_management.js.erb
@@ -72,7 +72,7 @@ require(["jquery", "YSDEntityManagement", "YSDEntityManagementComplementHooks",
   hooks = hooks.concat(EntityManagementComplementHooks.complements);
                  
   var contentsManager = new EntityManagement(urls, 'booking_item', 20, hooks,
-    {prefix: '/admin'});
+    {prefix: '/admin/booking'});
 
   
 });
