--- a/views/booking_pickup_return_place_defs_management.erb
+++ b/views/booking_pickup_return_place_defs_management.erb
@@ -42,7 +42,7 @@
       </td>
       <td class="table-cell">
               <div>
-                <a href="/admin/booking-places/<%%=entity.id%>">
+                <a href="/admin/booking/booking-places/<%%=entity.id%>">
                   <%=t.booking_places_definition_management.table.places%>
                 </a>
               </div>           
