--- a/views/booking_pickup_return_place_defs_management.js.erb
+++ b/views/booking_pickup_return_place_defs_management.js.erb
@@ -29,7 +29,7 @@ require(["jquery", "YSDEntityManagement", "jquery.ui", "YSDjson2"],
   var hooks = [placeDefinitionHook];
                  
   var hooksManager = new EntityManagement(urls, 'booking-place-definition',
-     <%=booking_pickup_return_place_defs%>, hooks, {prefix: '/admin'});
+     <%=booking_pickup_return_place_defs%>, hooks, {prefix: '/admin/booking'});
 
   
 });
