--- a/views/config_booking.erb
+++ b/views/config_booking.erb
@@ -1,6 +1,6 @@
 <h2><%=t.booking_settings.form.title%></h2>
 <div data-alerts="alerts" data-titles="{'success':'<%=t.entitymanagement.success%>','warning':'<%=t.entitymanagement.warning%>','error':'<%=t.entitymanagement.error%>'}" data-fade="10000"></div>
-<form name="variables" action="/variables" method="PUT" 
+<form name="variables" action="/api/variables" method="PUT" 
       data-remote="ajax" data-remote-method="PUT">
 
   <h3><%=t.booking_settings.form.general_group%></h3>
