--- a/views/console_booking.erb
+++ b/views/console_booking.erb
@@ -4,57 +4,57 @@
 <div class="container_12">
   <div class="grid_3">
     <div class="box box-shadow guiblock background-color-1" style="padding: 3em">
-      <p class="centered_text"><a href="/config/booking"><%=t.booking_console.configuration%></a></p>
+      <p class="centered_text"><a href="/admin/booking/config"><%=t.booking_console.configuration%></a></p>
     </div>
   </div>
   <div class="grid_3">
     <div class="box box-shadow guiblock background-color-2"  style="padding: 3em">
-      <p class="centered_text"><a href="/admin/booking-categories"><%=t.booking_console.categories%></a></p>
+      <p class="centered_text"><a href="/admin/booking/booking-categories"><%=t.booking_console.categories%></a></p>
     </div>     
   </div>
   <div class="grid_3">
     <div class="box box-shadow guiblock background-color-1"  style="padding: 3em">
-      <p class="centered_text"><a href="/admin/booking-extras"><%=t.booking_console.extras%></a></p>
+      <p class="centered_text"><a href="/admin/booking/booking-extras"><%=t.booking_console.extras%></a></p>
     </div>
   </div>
   <div class="grid_3">
     <div class="box box-shadow guiblock background-color-2"  style="padding: 3em">
-      <p class="centered_text"><a href="/admin/booking-place-defs"><%=t.booking_console.places%></a></p>
+      <p class="centered_text"><a href="/admin/booking/booking-place-defs"><%=t.booking_console.places%></a></p>
     </div>
   </div>     
   <div class="grid_3"> 
     <div class="box box-shadow guiblock background-color-2"  style="padding: 3em">
-      <p class="centered_text"><a href="/admin/booking-items"><%=t.booking_console.items%></a></p>
+      <p class="centered_text"><a href="/admin/booking/booking-items"><%=t.booking_console.items%></a></p>
     </div>
   </div>  
   <div class="grid_3">
     <div class="box box-shadow guiblock background-color-2" style="padding: 3em">
-      <p class="centered_text"><a href="/admin/bookings/rates"><%=t.booking_console.rates%></a></p>
+      <p class="centered_text"><a href="/admin/booking/rates"><%=t.booking_console.rates%></a></p>
     </div>
   </div>  
   <div class="grid_3">
     <div class="box box-shadow guiblock background-color-2"  style="padding: 3em">
-      <p class="centered_text"><a href="/admin/bookings/availability"><%=t.booking_console.availability%></a></p>
+      <p class="centered_text"><a href="/admin/booking/availability"><%=t.booking_console.availability%></a></p>
     </div>
   </div>      
   <div class="grid_3">
     <div class="box box-shadow guiblock background-color-1"  style="padding: 3em">
-      <p class="centered_text"><a href="/admin/bookings"><%=t.booking_console.reservations%></a></p>
+      <p class="centered_text"><a href="/admin/booking/bookings"><%=t.booking_console.reservations%></a></p>
     </div>     
   </div>
   <div class="grid_3">
     <div class="box box-shadow guiblock background-color-2"  style="padding: 3em">
-      <p class="centered_text"><a href="/admin/bookings/planning"><%=t.booking_console.planning%></a></p>
+      <p class="centered_text"><a href="/admin/booking/planning"><%=t.booking_console.planning%></a></p>
     </div>
   </div>
   <div class="grid_3">
     <div class="box box-shadow guiblock background-color-2"  style="padding: 3em">
-      <p class="centered_text"><a href="/admin/bookings/new"><%=t.booking_console.new_booking%></a></p>
+      <p class="centered_text"><a href="/admin/booking/new"><%=t.booking_console.new_booking%></a></p>
     </div>
   </div>
   <div class="grid_3">
     <div class="box box-shadow guiblock background-color-2"  style="padding: 3em">
-      <p class="centered_text"><a href="/admin/bookings/summary"><%=t.booking_console.summary%></a></p>
+      <p class="centered_text"><a href="/admin/booking/summary"><%=t.booking_console.summary%></a></p>
     </div>
   </div>    
   <div class="grid_3">
