--- a/views/_pickedup_bookings.erb
+++ b/views/_pickedup_bookings.erb
@@ -39,7 +39,7 @@
          var i=0;
          for (i=0; i<data.length; i++) { %>          
          <tr class="table-row"> 
-           <td class="table-cell"><a href="/admin/bookings/<%%=data[i].id%>"><%%=data[i].id%></a></td>
+           <td class="table-cell"><a href="/admin/booking/bookings/<%%=data[i].id%>"><%%=data[i].id%></a></td>
            <td class="table-cell"><%%=data[i].booking_item_reference%></td>
            <td class="table-cell left_text right-margin"><%%=data[i].date_from.toString('yyyy.MM.dd')%> <%%=data[i].time_from%></td>
            <td class="table-cell left_text right-margin"><%%=data[i].pickup_place%></td>
