--- a/views/booking_extras_management.js.erb
+++ b/views/booking_extras_management.js.erb
@@ -50,7 +50,7 @@ require(["jquery", "YSDEntityManagement", "YSDEntityManagementComplementHooks",
   hooks = hooks.concat(EntityManagementComplementHooks.complements);
                  
   var hooksManager = new EntityManagement(urls, 'booking-extra', 20, hooks,
-    {prefix: '/admin'});
+    {prefix: '/admin/booking'});
 
   
 });
