--- a/views/bookings_planning.js.erb
+++ b/views/bookings_planning.js.erb
@@ -2,10 +2,15 @@ require(['YSDSpreadSheet', 'jquery'], function(Spreadsheet, $) {
 
   planningModel = {
 
+     bookingItemsDescription: [],
      bookingItems: [],
      bookings: [],
      month:new Date().getMonth()+1,
      year:new Date().getFullYear(),
+
+     daysInMonth: function() {
+       return new Date(this.year, this.month, 0).getDate();
+     },
 
      prevMonth: function() {
        if (this.month == 0) {
@@ -38,7 +43,7 @@ require(['YSDSpreadSheet', 'jquery'], function(Spreadsheet, $) {
                dataType : 'json',
                success: function(data, textStatus, jqXHR) {
                   planningModel.bookingItems = data.map(function(value, index, array) {
-                    return value.reference;
+                    return value.reference; 
                   });
                   planningView.update('items_available');
               }
@@ -116,37 +121,58 @@ require(['YSDSpreadSheet', 'jquery'], function(Spreadsheet, $) {
 
     buildSpreadsheet: function() { // Builds the spreadsheet with the booking items
 
+      var days = [];
+      var total = planningModel.daysInMonth();
+      for (var i=1;i<=total;i++) {
+        days[i-1]=i;
+      }
+
+      planningModel.bookingItemsDescription = planningModel.bookingItems.map(function(value, index, array) {
+             return '<a href="/admin/booking/scheduler/' + value +'?year=' + planningModel.year + '&month=' + (planningModel.month-1) +'" target="blank">'+value+'</a>'
+      });
+
+      $('#planning_table').html('');
       spreadsheet = new Spreadsheet("planning_table",  
           planningModel.bookingItems,            // items
-          [1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,31], // days of month          
+          days,                                  // columns
           planningModel.bookingItems.length,     // number of rows (items.count)
-          "Planning",                            // 0-0 title
+          "Planning ",                           // 0-0 title
           "planning",                            // input prefix
           1,                                     // input size
-          "centered_text",                                    // class
-          true);                                 // readonly
+          "centered_text",                       // class
+          true,                                  // readonly
+          planningModel.bookingItemsDescription);                                 
 
     },
 
     updateBookings: function() {
 
+      this.buildSpreadsheet();
+
       var idx = 0;
       var reference;
       var from, to;
+      $('.spread_input').val('');
       for (var i=0;i<planningModel.bookings.length;i++) {
          reference = planningModel.bookings[i].booking_item_reference;
          idx = planningModel.bookingItems.indexOf(reference);
          if (idx > 0) {
            from = planningModel.bookings[i].date_from.getDate();
            if (planningModel.bookings[i].date_to.getMonth() != planningModel.bookings[i].date_from.getMonth()) {
-             var d = new Date();
-             d.setFullYear(planningModel.bookings[i].date_to.getYear(), planningModel.bookings[i].date_to.getMonth() + 1, 0);
-             to = d.getDate();
+             if (planningModel.bookings[i].date_from.getMonth()+1 == planningModel.month) {
+               var d = new Date();
+               d.setFullYear(planningModel.bookings[i].date_to.getYear(), planningModel.bookings[i].date_to.getMonth() + 1, 0);
+               to = d.getDate();
+             }
+             else {
+               from = 1;
+               to = planningModel.bookings[i].date_to.getDate();
+             }
            }
            else {
              to = Math.min(planningModel.bookings[i].date_to.getDate())
            }
-           for (var day=from;day<to;day++) {
+           for (var day=from;day<=to;day++) {
              $('#\\[planning\\]\\['+reference+'\\]\\['+day+'\\]').val('X');
            }
          }
